--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1" />
         <meta charset="utf-8" />
-        <title>みんなでテイクアウトMAP -開発版-</title>
+        <title>みんなでテイクアウトMAP -淀川3区版-</title>
         <meta property="og:url" content="https://yodogawa3.github.io/takeaway/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="みんなでテイクアウトMAP <淀川3区版>" />
@@ -49,8 +49,8 @@
                     </a>
                 </nav>
                 <div class="col-3 dropdown pr-0">
-                    <button type="button" class="nav-item btn btn-sm dropdown-toggle float-right" style="height: 30px; margin: 4px;" data-toggle="dropdown">
-                        <span glot-model="data_edit" class="menu"></span></button>
+                    <button type="button" class="nav-item btn btn-sm float-right" style="height: 30px; margin: 4px;" data-toggle="dropdown">
+                        <i class="fas fa-bars fa-2x text-white"></i></button>
                     <div class="dropdown-menu dropdown-menu-right" id="temp_menu">
                         <a class="dropdown-item" target="_blank"><span></span></a>
                         <div class="dropdown-divider" id="temp_divider"></div>
