--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="container">
             <header class="row d-flex align-items-center">
                 <nav class="navbar navbar-expand-lg navbar-light pl-1 pt-0 pr-0 col-9 mt-1">
-                    <a href="http://yourusername.github.io/index.html">
+                    <a href="http://yodogawa3.github.io/index.html">
                         <img src="https://ga-beacon.appspot.com/UA-165626594-1/yodogawa3.github.io/index.html?pixel"/>
                     </a>
                     <a class="navbar-brand" href="#">
