--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                             <span glot-model="title" class="align-middle" style="text-overflow: ellipsis;"></span>
                         </h1>
                     </a>
-                    <a href="http://yodogawa3.github.io/index.html">
-                        <img src="https://ga-beacon.appspot.com/UA-165626594-1/yodogawa3.github.io/index.html?pixel" />
+                    <a href="http://yodogawa3.github.io/takeaway">
+                        <img src="https://ga-beacon.appspot.com/UA-165626594-1/yodogawa3.github.io/takeaway/index.html?pixel" />
                     </a>
                 </nav>
                 <div class="col-3 dropdown pr-0">
