--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <link rel="stylesheet" href="./lib/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.9.1/mapbox-gl.css" />
         <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/sc-2.0.1/sl-1.3.1/datatables.min.css" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165626594-1"></script>
+                <script>
+                  window.dataLayer = window.dataLayer || [];
+                  function gtag(){dataLayer.push(arguments);}
+                  gtag('js', new Date());
+
+                  gtag('config', 'UA-165626594-1');
+                </script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
@@ -46,9 +55,6 @@
                             <img src="./image/bentou.svg" class="d-inline-block align-top" height="20">
                             <span glot-model="title" class="align-middle" style="text-overflow: ellipsis;"></span>
                         </h1>
-                    </a>
-                    <a href="http://yodogawa3.github.io/takeaway">
-                        <img src="https://ga-beacon.appspot.com/UA-165626594-1/yodogawa3.github.io/takeaway/index.html?pixel" />
                     </a>
                 </nav>
                 <div class="col-3 dropdown pr-0">
