--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.9.1/mapbox-gl.css" />
         <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/sc-2.0.1/sl-1.3.1/datatables.min.css" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165626594-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'UA-165626594-2');
+        </script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
@@ -42,9 +51,6 @@
         <div id="container">
             <header class="row d-flex align-items-center">
                 <nav class="navbar navbar-expand-lg navbar-light pl-1 pt-0 pr-0 col-9 mt-1">
-                    <a href="http://yodogawa3.github.io/index.html">
-                        <img src="https://ga-beacon.appspot.com/UA-165626594-2/yodogawa3.github.io/index.html?pixel" />
-                    </a>
                     <a class="navbar-brand" href="#">
                         <h1 style="color: white;">
                             <img src="./image/bentou.svg" class="d-inline-block align-top" height="20">
