--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           gtag('js', new Date());
         
           gtag('config', 'UA-165626594-2');
+            
+            gtag('set', {'user_id': 'UA-165626594-2'}); 
         </script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
