--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1" />
         <meta charset="utf-8" />
-        <title>みんなでテイクアウトMAP -淀川3区版-</title>
-        <meta property="og:url" content="https://yodogawa3.github.io/takeaway/" />
+        <title>みんなでテイクアウトMAP -開発版-</title>
+        <meta property="og:url" content="https://k-sakanoshita.github.io/takeaway/" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="みんなでテイクアウトMAP <淀川3区版>" />
+        <meta property="og:title" content="みんなでテイクアウトMAP" />
         <meta property="og:description" content="みんなでテイクアウト出来るお店を共有しよう" />
-        <meta property="og:image" content="https://yodogawa3.github.io/takeaway/image/thumbnail.png" />
-        <link rel="canonical" href="https://yodogawa3.github.io/takeaway/">
+        <meta property="og:image" content="https://k-sakanoshita.github.io/takeaway/image/thumbnail.png" />
+        <link rel="canonical" href="https://k-sakanoshita.github.io/takeaway/">
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="takeaway.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css" />
@@ -20,33 +20,21 @@
         <link rel="stylesheet" href="./lib/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.9.1/mapbox-gl.css" />
         <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/sc-2.0.1/sl-1.3.1/datatables.min.css" />
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165626594-2"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-        
-          gtag('config', 'UA-165626594-2');
-            
-            gtag('set', {'user_id': 'UA-165626594-2'}); 
-        </script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
-        <script src="./lib/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet-src.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.9.1/mapbox-gl.js"></script>
-        <script src="https://cdn.maptiler.com/mapbox-gl-leaflet/latest/leaflet-mapbox-gl.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.65.2/src/L.Control.Locate.min.js"></script>
-        <script src="https://cdn.datatables.net/v/bs4/dt-1.10.20/sc-2.0.1/sl-1.3.1/datatables.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
-        <script src="./lib/glottologist.js"></script>
-        <script src="./lib/osmtogeojson.js"></script>
-        <script src="./lib/leaflet-hash.js"></script>
-        <script src="./takeaway.js"></script>
-        <script src="./takeawayLib.js"></script>
+        <script defer src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.1.0/chroma.min.js"></script>
+        <script defer src="./lib/bootstrap.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet-src.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.9.1/mapbox-gl.js"></script>
+        <script defer src="https://cdn.maptiler.com/mapbox-gl-leaflet/latest/leaflet-mapbox-gl.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.65.2/src/L.Control.Locate.min.js"></script>
+        <script defer src="https://cdn.datatables.net/v/bs4/dt-1.10.20/sc-2.0.1/sl-1.3.1/datatables.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
+        <script defer src="./lib/glottologist.js"></script>
+        <script defer src="./lib/osmtogeojson.js"></script>
+        <script defer src="./lib/leaflet-hash.js"></script>
+        <script defer src="./takeawayLib.js"></script>
+        <script defer src="./takeaway.js"></script>
     </head>
 
     <body>
