--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>みんなでテイクアウトMAP -淀川3区版-</title>
         <meta property="og:url" content="https://yodogawa3.github.io/takeaway/" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="みんなでテイクアウトMAP <淀川3区版>" />
+        <meta property="og:title" content="みんなでテイクアウトMAP &lt;淀川3区版&gt;" />
         <meta property="og:description" content="みんなでテイクアウト出来るお店を共有しよう" />
         <meta property="og:image" content="https://yodogawa3.github.io/takeaway/image/thumbnail.png" />
         <link rel="canonical" href="https://yodogawa3.github.io/takeaway/">
